# GenericProductFluxer

./: .dockerignore  .env.example  .gitignore  CLEANUP_SUMMARY.md  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  run_app.py  wsgi.py
deprecated/: ant_extractor.py  desc_extractor.py  serp_pipeline.py  test_desc_Extractor.py
docs/: ENHANCED_EXTRACTOR_README.md  EXTRACTORS_COMPARISON.md  HTML_EXTRACTOR_README.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_COMPLETE.md  MIGRATION_GUIDE.md  NEW_WEB_APP_SUMMARY.md  POETRY_QUICK_START.md  QUICK_START.md  RESTRUCTURING_PLAN.md  STRANDBAGS_FIX_SUMMARY.md  TEST_LIVE_EXTRACTION_README.md  WEB_APP_README.md
scripts/: reorganize.py
scripts/debug/: debug_html_structure.py  debug_strandbags.py  debug_strandbags_with_js.py  inspect_strandbags_response.py
scripts/examples/: example_integration.py
scripts/utils/: playwright_fetch.py
src/fluxer/: __init__.py  config.py  logger.py  models.py
src/fluxer/api/: __init__.py  app.py  routes.py
src/fluxer/extractors/: __init__.py  firecrawl_extractor.py  html_extractor.py
src/fluxer/fetchers/: __init__.py
src/fluxer/schemas/: __init__.py  entities.py
src/fluxer/search/: __init__.py  (+1 more)
templates/: entities.html  generate.html  index.html  seo.html
tests/: __init__.py  conftest.py  test_serp_processor.py
tests/integration/: __init__.py  test_api.py  test_enhanced_extraction.py
tests/unit/: __init__.py  test_entity_merge.py  test_entity_rules.py  test_env_loading.py  test_html_extractor.py  test_html_extractor_v2.py
(+15 files in other folders)
