[project]
name = "fluxer"
version = "1.0.0"
description = "Product Intelligence Extraction with SERP API and ScraperAPI"
authors = [
    {name = "Fluxer Atelier"}
]
readme = "README.md"
requires-python = ">=3.11 ,<4.0"
dependencies = [
    "serpapi (>=0.1.5,<0.2.0)",
    "google-search-results (>=2.4.2,<3.0.0)",
    "lxml (>=6.0.2,<7.0.0)",
    "flask (>=3.0.0,<4.0.0)",
    "flask-cors (>=4.0.0,<5.0.0)",
    "requests (>=2.31.0,<3.0.0)",
    "beautifulsoup4 (>=4.12.0,<5.0.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
    "scikit-learn (>=1.3.0,<2.0.0)",
    "numpy (>=1.24.0,<2.0.0)",
    "openai (>=1.0.0,<2.0.0)",
    "gunicorn (>=21.0.0,<23.0.0); sys_platform != 'win32'"
]

[tool.poetry]
packages = [{include = "fluxer", from = "src"}]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
